--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "public/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "build": "webpack",
+    "start": "webpack && webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,15 @@
   "homepage": "https://github.com/makobasuri/deecra2#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "parcel-bundler": "^1.9.6",
     "phaser": "^3.10.1",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "webpack": "^4.16.0",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-serve": "^2.0.2"
   },
   "devDependencies": {
-    "chokidar": "^2.0.4"
+    "chokidar": "^2.0.4",
+    "webpack-cli": "^3.0.8"
   }
 }
