--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deecra2",
   "version": "1.0.0",
   "description": "",
-  "main": "public/index.html",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/makobasuri/deecra2#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
     "parcel-bundler": "^1.9.6",
     "phaser": "^3.10.1",
     "socket.io": "^2.1.1",
